envío de email y ejecución de pruebas y correcciones

--- a/project.json
+++ b/project.json
@@ -4,6 +4,7 @@
   "description": "Robotic Enterprise Framework",
   "main": "Main.xaml",
   "dependencies": {
+    "UiPath.Mail.Activities": "[1.24.11]",
     "UiPath.System.Activities": "[24.12.0-preview]",
     "UiPath.UIAutomation.Activities": "[24.12.3-preview]"
   },
